Added post route to choreAssignments
